# hpc2018

./: LICENSE  README.md
final/paper/: .samplepaper.tex.swp  fig1.eps  samplepaper.tex
final/src/: CMakeLists.txt  data.csv  mc.c  montecarlo.c  montecarlo.cu  montecarlo12x13.cpp  montecarlo22x23.cpp  montecarlo2x3.cpp  montecarlo4x5.cpp  montecarlo_pl.c  montecarlo_pl.cpp  simplex.cpp  simplex12x13.cpp  simplex22x23.cpp  simplex2x3.cpp  simplex3x4.cpp  simplex4x5.cpp  start.sh
parcial-2/: .gitignore  CMakeLists.txt  id2.csv  in1.csv  in2.csv  matrix_multiplication.cu  start.sh
taller-1/: main.c  matrix_destiny.csv  multiplicand.csv  multiplier.csv
